core/src/main/test/templates/error/top_level_directive.zs
this is a test
this is line 2
[#if foo}
	abcd
[/#if]